# storage

./: .gitignore  CHANGELOG.md  ENV_EXAMPLE.txt  FEATURES.md  LOGO_GUIDE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  SOLUCOES_RESUMO.md  package-lock.json  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  r2.rs  storage.rs
src/components/: ConfigModal.tsx  CopyButtons.tsx  FileGrid.tsx  UploadZone.tsx  WindowControls.tsx
src/lib/: utils.ts
