[package]
name = "storage-app"
version = "0.1.0"
description = "File upload app with Cloudflare R2"
authors = ["Felipe Santos"]
edition = "2021"

[lib]
name = "storage_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dotenv = "0.15"
dirs = "5"
arboard = "3"

